updated information about the project

--- a/notebooks/End-end-bulldozer-regression.ipynb
+++ b/notebooks/End-end-bulldozer-regression.ipynb
@@ -25,18 +25,44 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "# Predicting the Sale Price of Bulldozers using Machine Learning\n",
+    "\n",
+    "We're going to go through a machine learning project with the goal of predicting the sale price of bulldozers \n",
+    "\n",
+    "## 1. Problem Definition\n",
+    "> How well can we predict the future sale price of a bulldozer, given its characteristics and previous examples of how much similar bulldozer have been solved for?\n",
+    "\n",
+    "## 2. Data\n",
+    "The data is downloaded from the Kaggle Blubook for Bulldozers competition.\n",
+    "\n",
+    "The dataset is split into three parts which could be downloaded [here](https://www.kaggle.com/c/bluebook-for-bulldozers/data):\n",
+    "\n",
+    "    Train.csv is the training set, which contains data through the end of 2011.\n",
+    "    Valid.csv is the validation set, which contains data from January 1, 2012 - April 30, 2012 You make predictions on this set throughout the majority of the competition. Your score on this set is used to create the public leaderboard.\n",
+    "    Test.csv is the test set, which won't be released until the last week of the competition. It contains data from May 1, 2012 - November 2012. Your score on the test set determines your final rank for the competition.\n",
+    "\n",
+    "The key fields are in train.csv are:\n",
+    "\n",
+    "    SalesID: the uniue identifier of the sale\n",
+    "    MachineID: the unique identifier of a machine.  A machine can be sold multiple times\n",
+    "    saleprice: what the machine sold for at auction (only provided in train.csv)\n",
+    "    saledate: the date of the sale\n",
+    "\n",
+    "## 3. Evaluation\n",
+    "The evaluation metric is the RMSLE (root mean squared log error) between the actual and prediction auction prices.\n",
+    "\n",
+    "## 4. Features\n",
+    "Seen in Data Dictionary in [Kaggle](https://www.kaggle.com/c/bluebook-for-bulldozers/data). "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -44,13 +70,6 @@
     "import matplotlib.pyplot as plt \n",
     "import sklearn"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
