--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -357,7 +357,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2468d30a760>"
+       "<matplotlib.collections.PathCollection at 0x26a2e64b1c0>"
       ]
      },
      "execution_count": 4,
@@ -499,16 +499,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2468f12d910>"
+       "<matplotlib.collections.PathCollection at 0x26a45a28970>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
        "Steering_Controls                                                       NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
        "Name: saledate, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,14 +1306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "205615   1989-01-17\n",
-       "67974    1989-01-31\n",
        "274835   1989-01-31\n",
        "141296   1989-01-31\n",
        "212552   1989-01-31\n",
@@ -1324,6 +1323,7 @@
        "135376   1989-01-31\n",
        "113390   1989-01-31\n",
        "113394   1989-01-31\n",
+       "116419   1989-01-31\n",
        "32138    1989-01-31\n",
        "127610   1989-01-31\n",
        "76171    1989-01-31\n",
@@ -1335,7 +1335,7 @@
        "Name: saledate, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,21 +1350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "205615   1989-01-17\n",
-       "67974    1989-01-31\n",
        "274835   1989-01-31\n",
        "141296   1989-01-31\n",
        "212552   1989-01-31\n",
+       "62755    1989-01-31\n",
        "Name: saledate, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
