started feature engineering

--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -1377,6 +1377,164 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make a copy of the original dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SalesID</th>\n",
+       "      <th>SalePrice</th>\n",
+       "      <th>MachineID</th>\n",
+       "      <th>ModelID</th>\n",
+       "      <th>datasource</th>\n",
+       "      <th>auctioneerID</th>\n",
+       "      <th>YearMade</th>\n",
+       "      <th>MachineHoursCurrentMeter</th>\n",
+       "      <th>UsageBand</th>\n",
+       "      <th>saledate</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Undercarriage_Pad_Width</th>\n",
+       "      <th>Stick_Length</th>\n",
+       "      <th>Thumb</th>\n",
+       "      <th>Pattern_Changer</th>\n",
+       "      <th>Grouser_Type</th>\n",
+       "      <th>Backhoe_Mounting</th>\n",
+       "      <th>Blade_Type</th>\n",
+       "      <th>Travel_Controls</th>\n",
+       "      <th>Differential_Type</th>\n",
+       "      <th>Steering_Controls</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>205615</th>\n",
+       "      <td>1646770</td>\n",
+       "      <td>9500.0</td>\n",
+       "      <td>1126363</td>\n",
+       "      <td>8434</td>\n",
+       "      <td>132</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1989-01-17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None or Unspecified</td>\n",
+       "      <td>Straight</td>\n",
+       "      <td>None or Unspecified</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274835</th>\n",
+       "      <td>1821514</td>\n",
+       "      <td>14000.0</td>\n",
+       "      <td>1194089</td>\n",
+       "      <td>10150</td>\n",
+       "      <td>132</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1989-01-31</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Standard</td>\n",
+       "      <td>Conventional</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 53 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        SalesID  SalePrice  MachineID  ModelID  datasource  auctioneerID  \\\n",
+       "205615  1646770     9500.0    1126363     8434         132          18.0   \n",
+       "274835  1821514    14000.0    1194089    10150         132          99.0   \n",
+       "\n",
+       "        YearMade  MachineHoursCurrentMeter UsageBand   saledate  ...  \\\n",
+       "205615      1974                       NaN       NaN 1989-01-17  ...   \n",
+       "274835      1980                       NaN       NaN 1989-01-31  ...   \n",
+       "\n",
+       "       Undercarriage_Pad_Width Stick_Length Thumb Pattern_Changer  \\\n",
+       "205615                     NaN          NaN   NaN             NaN   \n",
+       "274835                     NaN          NaN   NaN             NaN   \n",
+       "\n",
+       "       Grouser_Type     Backhoe_Mounting Blade_Type      Travel_Controls  \\\n",
+       "205615          NaN  None or Unspecified   Straight  None or Unspecified   \n",
+       "274835          NaN                  NaN        NaN                  NaN   \n",
+       "\n",
+       "       Differential_Type Steering_Controls  \n",
+       "205615               NaN               NaN  \n",
+       "274835          Standard      Conventional  \n",
+       "\n",
+       "[2 rows x 53 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tmp = df.copy()\r\n",
+    "df_tmp.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add datetime paramaters for saledata column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
