--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -2444,7 +2444,246 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modeling"
+    "## Model Driven EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Building a machine learning model\r\n",
+    "# Using random forrest regressor\r\n",
+    "from sklearn.ensemble import RandomForestRegressor\r\n",
+    "\r\n",
+    "#uses as many cores as possible in computer\r\n",
+    "model = RandomForestRegressor(\r\n",
+    "    n_jobs=-1,\r\n",
+    "    random_state=42, #alternative to np.random.seed(42)\r\n",
+    ")\r\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## We have missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Turning data into numbers\r\n",
+    "\r\n",
+    "#### Converting data into pandas categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.api.types.is_string_dtype(df_tmp['UsageBand'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UsageBand\n",
+      "fiModelDesc\n",
+      "fiBaseModel\n",
+      "fiSecondaryDesc\n",
+      "fiModelSeries\n",
+      "fiModelDescriptor\n",
+      "ProductSize\n",
+      "fiProductClassDesc\n",
+      "state\n",
+      "ProductGroup\n",
+      "ProductGroupDesc\n",
+      "Drive_System\n",
+      "Enclosure\n",
+      "Forks\n",
+      "Pad_Type\n",
+      "Ride_Control\n",
+      "Stick\n",
+      "Transmission\n",
+      "Turbocharged\n",
+      "Blade_Extension\n",
+      "Blade_Width\n",
+      "Enclosure_Type\n",
+      "Engine_Horsepower\n",
+      "Hydraulics\n",
+      "Pushblock\n",
+      "Ripper\n",
+      "Scarifier\n",
+      "Tip_Control\n",
+      "Tire_Size\n",
+      "Coupler\n",
+      "Coupler_System\n",
+      "Grouser_Tracks\n",
+      "Hydraulics_Flow\n",
+      "Track_Type\n",
+      "Undercarriage_Pad_Width\n",
+      "Stick_Length\n",
+      "Thumb\n",
+      "Pattern_Changer\n",
+      "Grouser_Type\n",
+      "Backhoe_Mounting\n",
+      "Blade_Type\n",
+      "Travel_Controls\n",
+      "Differential_Type\n",
+      "Steering_Controls\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find columns which contains strings\r\n",
+    "for label, content in df_tmp.items():\r\n",
+    "    if pd.api.types.is_string_dtype(content):\r\n",
+    "        print(label)\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting strings into categories\r\n",
+    "for label, content in df_tmp.items():\r\n",
+    "    if pd.api.types.is_string_dtype(content):\r\n",
+    "        df_tmp[label] = content.astype('category').cat.as_ordered()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 412698 entries, 205615 to 409203\n",
+      "Data columns (total 57 columns):\n",
+      " #   Column                    Non-Null Count   Dtype   \n",
+      "---  ------                    --------------   -----   \n",
+      " 0   SalesID                   412698 non-null  int64   \n",
+      " 1   SalePrice                 412698 non-null  float64 \n",
+      " 2   MachineID                 412698 non-null  int64   \n",
+      " 3   ModelID                   412698 non-null  int64   \n",
+      " 4   datasource                412698 non-null  int64   \n",
+      " 5   auctioneerID              392562 non-null  float64 \n",
+      " 6   YearMade                  412698 non-null  int64   \n",
+      " 7   MachineHoursCurrentMeter  147504 non-null  float64 \n",
+      " 8   UsageBand                 73670 non-null   category\n",
+      " 9   fiModelDesc               412698 non-null  category\n",
+      " 10  fiBaseModel               412698 non-null  category\n",
+      " 11  fiSecondaryDesc           271971 non-null  category\n",
+      " 12  fiModelSeries             58667 non-null   category\n",
+      " 13  fiModelDescriptor         74816 non-null   category\n",
+      " 14  ProductSize               196093 non-null  category\n",
+      " 15  fiProductClassDesc        412698 non-null  category\n",
+      " 16  state                     412698 non-null  category\n",
+      " 17  ProductGroup              412698 non-null  category\n",
+      " 18  ProductGroupDesc          412698 non-null  category\n",
+      " 19  Drive_System              107087 non-null  category\n",
+      " 20  Enclosure                 412364 non-null  category\n",
+      " 21  Forks                     197715 non-null  category\n",
+      " 22  Pad_Type                  81096 non-null   category\n",
+      " 23  Ride_Control              152728 non-null  category\n",
+      " 24  Stick                     81096 non-null   category\n",
+      " 25  Transmission              188007 non-null  category\n",
+      " 26  Turbocharged              81096 non-null   category\n",
+      " 27  Blade_Extension           25983 non-null   category\n",
+      " 28  Blade_Width               25983 non-null   category\n",
+      " 29  Enclosure_Type            25983 non-null   category\n",
+      " 30  Engine_Horsepower         25983 non-null   category\n",
+      " 31  Hydraulics                330133 non-null  category\n",
+      " 32  Pushblock                 25983 non-null   category\n",
+      " 33  Ripper                    106945 non-null  category\n",
+      " 34  Scarifier                 25994 non-null   category\n",
+      " 35  Tip_Control               25983 non-null   category\n",
+      " 36  Tire_Size                 97638 non-null   category\n",
+      " 37  Coupler                   220679 non-null  category\n",
+      " 38  Coupler_System            44974 non-null   category\n",
+      " 39  Grouser_Tracks            44875 non-null   category\n",
+      " 40  Hydraulics_Flow           44875 non-null   category\n",
+      " 41  Track_Type                102193 non-null  category\n",
+      " 42  Undercarriage_Pad_Width   102916 non-null  category\n",
+      " 43  Stick_Length              102261 non-null  category\n",
+      " 44  Thumb                     102332 non-null  category\n",
+      " 45  Pattern_Changer           102261 non-null  category\n",
+      " 46  Grouser_Type              102193 non-null  category\n",
+      " 47  Backhoe_Mounting          80712 non-null   category\n",
+      " 48  Blade_Type                81875 non-null   category\n",
+      " 49  Travel_Controls           81877 non-null   category\n",
+      " 50  Differential_Type         71564 non-null   category\n",
+      " 51  Steering_Controls         71522 non-null   category\n",
+      " 52  saleYear                  412698 non-null  int64   \n",
+      " 53  saleMonth                 412698 non-null  int64   \n",
+      " 54  saleDay                   412698 non-null  int64   \n",
+      " 55  saleDayOfWeek             412698 non-null  int64   \n",
+      " 56  saleDayOfYear             412698 non-null  int64   \n",
+      "dtypes: category(44), float64(3), int64(10)\n",
+      "memory usage: 83.3 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tmp.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California', 'Colorado',\n",
+       "       'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii', 'Idaho',\n",
+       "       'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',\n",
+       "       'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota',\n",
+       "       'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada',\n",
+       "       'New Hampshire', 'New Jersey', 'New Mexico', 'New York',\n",
+       "       'North Carolina', 'North Dakota', 'Ohio', 'Oklahoma', 'Oregon',\n",
+       "       'Pennsylvania', 'Puerto Rico', 'Rhode Island', 'South Carolina',\n",
+       "       'South Dakota', 'Tennessee', 'Texas', 'Unspecified', 'Utah', 'Vermont',\n",
+       "       'Virginia', 'Washington', 'Washington DC', 'West Virginia', 'Wisconsin',\n",
+       "       'Wyoming'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tmp.state.cat.categories"
    ]
   },
   {
