checked percentage of msising data

--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -2688,6 +2688,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SalesID                      0.000000\n",
+      "SalePrice                    0.000000\n",
+      "MachineID                    0.000000\n",
+      "ModelID                      0.000000\n",
+      "datasource                   0.000000\n",
+      "auctioneerID                 4.879113\n",
+      "YearMade                     0.000000\n",
+      "MachineHoursCurrentMeter    64.258610\n",
+      "UsageBand                   82.149174\n",
+      "fiModelDesc                  0.000000\n",
+      "fiBaseModel                  0.000000\n",
+      "fiSecondaryDesc             34.099269\n",
+      "fiModelSeries               85.784520\n",
+      "fiModelDescriptor           81.871490\n",
+      "ProductSize                 52.485110\n",
+      "fiProductClassDesc           0.000000\n",
+      "state                        0.000000\n",
+      "ProductGroup                 0.000000\n",
+      "ProductGroupDesc             0.000000\n",
+      "Drive_System                74.051970\n",
+      "Enclosure                    0.080931\n",
+      "Forks                       52.092087\n",
+      "Pad_Type                    80.349796\n",
+      "Ride_Control                62.992794\n",
+      "Stick                       80.349796\n",
+      "Transmission                54.444412\n",
+      "Turbocharged                80.349796\n",
+      "Blade_Extension             93.704113\n",
+      "Blade_Width                 93.704113\n",
+      "Enclosure_Type              93.704113\n",
+      "Engine_Horsepower           93.704113\n",
+      "Hydraulics                  20.006155\n",
+      "Pushblock                   93.704113\n",
+      "Ripper                      74.086378\n",
+      "Scarifier                   93.701448\n",
+      "Tip_Control                 93.704113\n",
+      "Tire_Size                   76.341538\n",
+      "Coupler                     46.527727\n",
+      "Coupler_System              89.102443\n",
+      "Grouser_Tracks              89.126431\n",
+      "Hydraulics_Flow             89.126431\n",
+      "Track_Type                  75.237825\n",
+      "Undercarriage_Pad_Width     75.062637\n",
+      "Stick_Length                75.221348\n",
+      "Thumb                       75.204144\n",
+      "Pattern_Changer             75.221348\n",
+      "Grouser_Type                75.237825\n",
+      "Backhoe_Mounting            80.442842\n",
+      "Blade_Type                  80.161038\n",
+      "Travel_Controls             80.160553\n",
+      "Differential_Type           82.659475\n",
+      "Steering_Controls           82.669652\n",
+      "saleYear                     0.000000\n",
+      "saleMonth                    0.000000\n",
+      "saleDay                      0.000000\n",
+      "saleDayOfWeek                0.000000\n",
+      "saleDayOfYear                0.000000\n",
+      "dtype: float64%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check missing data percentage\r\n",
+    "print(f'{df_tmp.isnull().sum()/len(df_tmp) * 100}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
