filled in mussing numerical values

--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -2854,6 +2854,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filling in Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SalesID\n",
+      "SalePrice\n",
+      "MachineID\n",
+      "ModelID\n",
+      "datasource\n",
+      "auctioneerID\n",
+      "YearMade\n",
+      "MachineHoursCurrentMeter\n",
+      "saleYear\n",
+      "saleMonth\n",
+      "saleDay\n",
+      "saleDayOfWeek\n",
+      "saleDayOfYear\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tmp = pd.read_csv('data/train_tmp.csv', low_memory=False)\r\n",
+    "\r\n",
+    "#find numeric data\r\n",
+    "for label, content in df_tmp.items():\r\n",
+    "    if pd.api.types.is_numeric_dtype(content):  \r\n",
+    "        print(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "auctioneerID\n",
+      "MachineHoursCurrentMeter\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for which numeric columns have null values\r\n",
+    "for label, content in df_tmp.items():\r\n",
+    "    if pd.api.types.is_numeric_dtype(content):  \r\n",
+    "        if pd.isnull(content).sum():\r\n",
+    "            print(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fill numeric rows with median (median is more robust than mean)\r\n",
+    "# Mean is sensitive to outliers\r\n",
+    "for label, content in df_tmp.items():\r\n",
+    "    if pd.api.types.is_numeric_dtype(content):  \r\n",
+    "        if pd.isnull(content).sum():\r\n",
+    "            #Add a binary column which tells us if the data is missing or not\r\n",
+    "            df_tmp[label+\"_is_missing\"] = pd.isnull(content)\r\n",
+    "            #fill missing numeric values with median\r\n",
+    "            df_tmp[label] = content.fillna(content.median())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
