checked for null numeric values after editing

--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -2935,10 +2935,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if there is any null numeric values\r\n",
+    "for label, content in df_tmp.items():\r\n",
+    "    if pd.api.types.is_numeric_dtype(content):\r\n",
+    "        if pd.isnull(content).sum():\r\n",
+    "            print(label)\r\n",
+    "\r\n",
+    "# prints out nothing -> yey!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Check to see binary column\r\n"
+   ]
   }
  ],
  "metadata": {
