finished filling in numerical values

--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -2950,12 +2950,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False    392562\n",
+       "True      20136\n",
+       "Name: auctioneerID_is_missing, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check to see binary column\r\n",
+    "df_tmp.auctioneerID_is_missing.value_counts()\r\n",
+    "\r\n",
+    "# True -> corresponds to null data in original data file"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Check to see binary column\r\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
