--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -2974,6 +2974,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filling in categorical values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UsageBand\n",
+      "fiModelDesc\n",
+      "fiBaseModel\n",
+      "fiSecondaryDesc\n",
+      "fiModelSeries\n",
+      "fiModelDescriptor\n",
+      "ProductSize\n",
+      "fiProductClassDesc\n",
+      "state\n",
+      "ProductGroup\n",
+      "ProductGroupDesc\n",
+      "Drive_System\n",
+      "Enclosure\n",
+      "Forks\n",
+      "Pad_Type\n",
+      "Ride_Control\n",
+      "Stick\n",
+      "Transmission\n",
+      "Turbocharged\n",
+      "Blade_Extension\n",
+      "Blade_Width\n",
+      "Enclosure_Type\n",
+      "Engine_Horsepower\n",
+      "Hydraulics\n",
+      "Pushblock\n",
+      "Ripper\n",
+      "Scarifier\n",
+      "Tip_Control\n",
+      "Tire_Size\n",
+      "Coupler\n",
+      "Coupler_System\n",
+      "Grouser_Tracks\n",
+      "Hydraulics_Flow\n",
+      "Track_Type\n",
+      "Undercarriage_Pad_Width\n",
+      "Stick_Length\n",
+      "Thumb\n",
+      "Pattern_Changer\n",
+      "Grouser_Type\n",
+      "Backhoe_Mounting\n",
+      "Blade_Type\n",
+      "Travel_Controls\n",
+      "Differential_Type\n",
+      "Steering_Controls\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for columns which aren't numeric\r\n",
+    "for label, content in df_tmp.items():\r\n",
+    "    if not pd.api.types.is_numeric_dtype(content):\r\n",
+    "        print(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([43,  8,  8, ...,  4,  4,  4], dtype=int8)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Turns categorical variables into numbers\r\n",
+    "pd.Categorical(df_tmp['state']).codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Turns categorical variables into numbers and fills missing\r\n",
+    "for label, content in df_tmp.items():\r\n",
+    "    if not pd.api.types.is_numeric_dtype(content):\r\n",
+    "        #add binary column to indicate whether sample has missing value\r\n",
+    "        df_tmp[label+'_is_missing'] = pd.isnull(content)\r\n",
+    "        #turns categories into numbers and add + 1\r\n",
+    "        # Add 1 to avoid having -1 values in the data (ie, missing values)\r\n",
+    "        df_tmp[label] = pd.Categorical(content).codes + 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
