filled in missing categorical values

--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -3082,6 +3082,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SalesID                         0\n",
+       "SalePrice                       0\n",
+       "MachineID                       0\n",
+       "ModelID                         0\n",
+       "datasource                      0\n",
+       "                               ..\n",
+       "Backhoe_Mounting_is_missing     0\n",
+       "Blade_Type_is_missing           0\n",
+       "Travel_Controls_is_missing      0\n",
+       "Differential_Type_is_missing    0\n",
+       "Steering_Controls_is_missing    0\n",
+       "Length: 103, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tmp.isna().sum() # No more missing values!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
