scored baseline model

--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -3385,6 +3385,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9875468079970562"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Score baseline model\r\n",
+    "model.score(df_tmp.drop('SalePrice', axis=1), df_tmp['SalePrice'])\r\n",
+    "\r\n",
+    "# baseline score of 98.75% -> not reliable as data is not split"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
