splitted data into train and validation sets

--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -3407,6 +3407,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Splitting the data intro train/validation sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11573, 401125)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_val = df_tmp[df_tmp.saleYear == 2012]\r\n",
+    "df_train = df_tmp[df_tmp.saleYear != 2012]\r\n",
+    "\r\n",
+    "len(df_val), len(df_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((401125, 102), (401125,), (11573, 102), (11573,))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Split data into X and y\r\n",
+    "X_train, y_train = df_train.drop('SalePrice', axis=1), df_train.SalePrice\r\n",
+    "\r\n",
+    "X_valid, y_valid = df_val.drop('SalePrice', axis=1), df_val.SalePrice\r\n",
+    "\r\n",
+    "X_train.shape, y_train.shape, X_valid.shape, y_valid.shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
