--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -3462,6 +3462,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluating machine learning model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_log_error, mean_absolute_error, r2_score\r\n",
+    "def rmsle(y_test, y_preds):\r\n",
+    "    \"\"\"\r\n",
+    "    Calculates root mean squared log error between predictions and true labels\r\n",
+    "    \"\"\"\r\n",
+    "    return np.sqrt(mean_squared_log_error(y_test, y_preds))\r\n",
+    "\r\n",
+    "def show_scores(model):\r\n",
+    "    train_preds = model.predict(X_train)\r\n",
+    "    val_preds = model.predict(X_valid)\r\n",
+    "    scores = {\r\n",
+    "        'Training MAE': mean_absolute_error(y_train, train_preds),\r\n",
+    "        'Valid MAE': mean_absolute_error(y_valid, val_preds),\r\n",
+    "        'Training RMSLE': rmsle(y_train, train_preds),\r\n",
+    "        'Valid RMSLE': rmsle(y_valid, val_preds),\r\n",
+    "        'Training R^2': r2_score(y_train, train_preds),\r\n",
+    "        'Valid R^2': r2_score(y_valid, val_preds), \r\n",
+    "    }\r\n",
+    "\r\n",
+    "    return scores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
