--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -3502,7 +3502,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Testing model on a subset (for hyperparameter tuning)\r\n"
+    "## Testing model on a subset (for hyperparameter tuning)\r\n",
+    "\r\n",
+    "# This takes far too long for experimenting\r\n",
+    "# model = RandomForestRegressor(\r\n",
+    "#     n_jobs=-1,\r\n",
+    "#     random_state=42,\r\n",
+    "# )\r\n",
+    "\r\n",
+    "# model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(max_samples=10000, n_jobs=-1, random_state=42)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reducing data using max_samples\r\n",
+    "model = RandomForestRegressor(\r\n",
+    "    n_jobs=-1,\r\n",
+    "    random_state=42,\r\n",
+    "    max_samples=10000, #minimizes the data\r\n",
+    ")\r\n",
+    "\r\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Training MAE': 5561.2988092240585,\n",
+       " 'Valid MAE': 7177.26365505919,\n",
+       " 'Training RMSLE': 0.257745378256977,\n",
+       " 'Valid RMSLE': 0.29362638671089003,\n",
+       " 'Training R^2': 0.8606658995199189,\n",
+       " 'Valid R^2': 0.8320374995090507}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Score model\r\n",
+    "show_scores(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RandomizedSearchCV based hyperparameter tuning\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\r\n",
+    "\r\n",
+    "rf_grid = {\r\n",
+    "    'n_estimators': np.arange(10, 100, 10),\r\n",
+    "    'max_depth': [None, 3, 5, 10],\r\n",
+    "    'min_samples_split': np.arange(2, 20, 2),\r\n",
+    "    'min_samples_leaf': np.arange(1, 20, 2),\r\n",
+    "    'max_features': [0.5, 1, 'sqrt', 'auto'],\r\n",
+    "    'max_samples': [10000]\r\n",
+    "}\r\n",
+    "\r\n",
+    "#instantiate ranomdized search cv model\r\n",
+    "rs_model = RandomizedSearchCV(\r\n",
+    "    RandomForestRegressor(\r\n",
+    "        n_jobs=-1,\r\n",
+    "        random_state=42,\r\n",
+    "    ),\r\n",
+    "    param_distributions=rf_grid,\r\n",
+    "    n_iter=5,\r\n",
+    "    cv=5,\r\n",
+    "    verbose=True\r\n",
+    ")"
    ]
   }
  ],
