--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -3575,9 +3575,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:   27.7s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomizedSearchCV(cv=5,\n",
+       "                   estimator=RandomForestRegressor(n_jobs=-1, random_state=42),\n",
+       "                   n_iter=2,\n",
+       "                   param_distributions={'max_depth': [None, 3, 5, 10],\n",
+       "                                        'max_features': [0.5, 1, 'sqrt',\n",
+       "                                                         'auto'],\n",
+       "                                        'max_samples': [10000],\n",
+       "                                        'min_samples_leaf': array([ 1,  3,  5,  7,  9, 11, 13, 15, 17, 19]),\n",
+       "                                        'min_samples_split': array([ 2,  4,  6,  8, 10, 12, 14, 16, 18]),\n",
+       "                                        'n_estimators': array([10, 20, 30, 40, 50, 60, 70, 80, 90])},\n",
+       "                   verbose=True)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import RandomizedSearchCV\r\n",
     "\r\n",
@@ -3597,11 +3633,21 @@
     "        random_state=42,\r\n",
     "    ),\r\n",
     "    param_distributions=rf_grid,\r\n",
-    "    n_iter=5,\r\n",
+    "    n_iter=2,\r\n",
     "    cv=5,\r\n",
     "    verbose=True\r\n",
-    ")"
+    ")\r\n",
+    "\r\n",
+    "#Fit the randomized search cv model\r\n",
+    "rs_model.fit(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
