started hyperparameter tuning

--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -3415,7 +3415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3424,7 +3424,7 @@
        "(11573, 401125)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3438,7 +3438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3447,7 +3447,7 @@
        "((401125, 102), (401125,), (11573, 102), (11573,))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3470,7 +3470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3515,7 +3515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3524,13 +3524,15 @@
        "RandomForestRegressor(max_samples=10000, n_jobs=-1, random_state=42)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Reducing data using max_samples\r\n",
+    "from sklearn.ensemble import RandomForestRegressor\r\n",
+    "\r\n",
     "model = RandomForestRegressor(\r\n",
     "    n_jobs=-1,\r\n",
     "    random_state=42,\r\n",
@@ -3542,7 +3544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -3556,7 +3558,7 @@
        " 'Valid R^2': 0.8320374995090507}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3575,7 +3577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3590,7 +3592,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:   27.7s finished\n"
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:   32.3s finished\n"
      ]
     },
     {
@@ -3609,7 +3611,7 @@
        "                   verbose=True)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
