--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -3645,6 +3645,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training a model with the best hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(max_features=0.5, min_samples_split=14, n_estimators=40,\n",
+       "                      n_jobs=-1)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ideal_model = RandomForestRegressor(\r\n",
+    "    n_estimators=40,\r\n",
+    "    min_samples_leaf=1,\r\n",
+    "    min_samples_split=14,\r\n",
+    "    max_features=0.5,\r\n",
+    "    n_jobs=-1,\r\n",
+    "    max_samples=None,\r\n",
+    "    random_state=42,\r\n",
+    ")\r\n",
+    "\r\n",
+    "ideal_model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluating model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Training MAE': 2953.9901028465797,\n",
+       " 'Valid MAE': 5957.717562943879,\n",
+       " 'Training RMSLE': 0.14462495274938925,\n",
+       " 'Valid RMSLE': 0.2464358694754798,\n",
+       " 'Training R^2': 0.9589359300067253,\n",
+       " 'Valid R^2': 0.8820280622547607}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_scores(ideal_model)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
