--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -4324,124 +4324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SalesID</th>\n",
-       "      <th>SalePrice</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1227829</td>\n",
-       "      <td>18242.248840</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1227844</td>\n",
-       "      <td>16495.528509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1227847</td>\n",
-       "      <td>52293.013365</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1227848</td>\n",
-       "      <td>60797.610938</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1227863</td>\n",
-       "      <td>47314.638720</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12452</th>\n",
-       "      <td>6643171</td>\n",
-       "      <td>43323.178256</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12453</th>\n",
-       "      <td>6643173</td>\n",
-       "      <td>14406.518769</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12454</th>\n",
-       "      <td>6643184</td>\n",
-       "      <td>16230.445699</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12455</th>\n",
-       "      <td>6643186</td>\n",
-       "      <td>20430.514757</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12456</th>\n",
-       "      <td>6643196</td>\n",
-       "      <td>30870.388347</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12457 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       SalesID     SalePrice\n",
-       "0      1227829  18242.248840\n",
-       "1      1227844  16495.528509\n",
-       "2      1227847  52293.013365\n",
-       "3      1227848  60797.610938\n",
-       "4      1227863  47314.638720\n",
-       "...        ...           ...\n",
-       "12452  6643171  43323.178256\n",
-       "12453  6643173  14406.518769\n",
-       "12454  6643184  16230.445699\n",
-       "12455  6643186  20430.514757\n",
-       "12456  6643196  30870.388347\n",
-       "\n",
-       "[12457 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Format prediction into pandas dataframe\r\n",
     "df_preds = pd.DataFrame()\r\n",
     "df_preds['SalesID'] = df_test['SalesID']\r\n",
     "df_preds['SalePrice'] = test_preds\r\n",
     "\r\n",
-    "df_preds"
+    "df_preds.to_csv('data/test_predictions.csv', index=False)"
    ]
   },
   {
