--- a/End-end-bulldozer-regression.ipynb
+++ b/End-end-bulldozer-regression.ipynb
@@ -4457,6 +4457,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Training MAE': 2953.9901028465797,\n",
+       " 'Valid MAE': 5957.717562943877,\n",
+       " 'Training RMSLE': 0.14462495274938925,\n",
+       " 'Valid RMSLE': 0.2464358694754798,\n",
+       " 'Training R^2': 0.9589359300067253,\n",
+       " 'Valid R^2': 0.8820280622547607}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_scores(ideal_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
